# lidar-board

Electronics/: LIDAR Lite.dch  LIDAR Lite.dip
Firmware/: CMakeLists.txt
Firmware/arm/: CMakeLists.txt  board_ILI9341.h  chconf.h  gfxconf.h  main.c  mcuconf.h  syscalls.c  userfonts.h
Firmware/cmake/: ChibiOS_2.6.7.cmake  Toolchain-stm32.cmake  ugfx-2.1.cmake
Firmware/scripts/: flash.cfg
Gerbers/: LIDARLite.cmp  LIDARLite.crc  LIDARLite.drd  LIDARLite.mnt  LIDARLite.sol
